--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,12 @@ main {
 .fiches article h2 {
 	text-align: center;
 }
+
+p,
+label {
+	font: 1rem 'Fira Sans', sans-serif;
+}
+
+input {
+	margin: 0.4rem;
+}
